--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.profiles.include=rds
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=create
