--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ out/
 
 src/main/resources/application-rds.properties
 src/main/resources/application-gpt.properties
+src/main/resources/application-s3.properties
