--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ out/
 src/main/resources/application-rds.properties
 src/main/resources/application-gpt.properties
 src/main/resources/application-s3.properties
+src/main/resources/application-oauth.properties
